force-app/main/default/objects/Collaborating_Organisation__c/Collaborating_Organisation__c.object-meta.xml
<CustomObject>
    <label>Collaborating Organisation</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Collaborating Organisation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaborating Organisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>