force-app/main/default/objects/Collaborating_Organisation__c/fields/I_RS_Ethics_Request__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Request__c</fullName>
    <label>Ethics Request</label>
    <referenceTo>Ethics_Request__c</referenceTo>
    <relationshipLabel>Collaborating Organisations</relationshipLabel>
    <relationshipName>Collaborating_Organisations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>